# reminder-rs

./: .gitignore  Cargo.toml  README.md  test.xml
src/: args.rs  main.rs  types.rs  util.rs
src/caldav/: calendar.rs  client.rs  mod.rs  parser.rs  todo.rs  types.rs
src/ical/: generics.rs  mod.rs  parser.rs  peg.rs  serializer.rs  test.rs  todo.rs  vtodo.rs
src/ical/components/: alarm.rs  mod.rs  todo.rs
src/ical/objects/: generics.rs  macros.rs  mod.rs  valarm.rs  vevent.rs  vjournal.rs  vtodo.rs
src/ical/tree/: lorax.rs  mod.rs  onceler.rs  test.rs  types.rs
src/ical/values/: base.rs  date.rs  datetime.rs  duration.rs  integer.rs  mod.rs  string.rs
src/tui/: app.rs  main.rs  mod.rs
