[package]
name = "reminder-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.33", features = ["serde"] }
clap = { version = "4.5.15", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
ratatui = "0.29.0"
crossterm = "0.28.1"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.93"
bon = "3.2.0"
